// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Player/Player.tools.svelte: Empty 1`] = `
<span>
  <div
    class="root svelte-1wzurh7"
  >
    <audio
      autoplay=""
      class="svelte-1wzurh7"
      data-testid="audio"
    />
    <div
      class="content svelte-1wzurh7"
    >
      <span
        class="current svelte-1wzurh7"
      />
       
      <div
        class="player svelte-1wzurh7"
      >
        <span
          class="controls svelte-1wzurh7"
        >
          
           
          <span
            class="svelte-5wf0h"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1vd9h50"
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-1vd9h50"
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-1vd9h50"
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-5wf0h"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
        </span>
         
        <div
          class="svelte-fkspjj"
        >
          <span
            class="svelte-fkspjj"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-1gmj9k4"
          >
            <input
              class="w-full svelte-1gmj9k4"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-1gmj9k4"
            >
              <span
                class="progress svelte-1gmj9k4"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-fkspjj"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-1wzurh7"
      >
        <div
          class="svelte-186fmtk"
        >
          <span
            class="volume-slider svelte-186fmtk"
          >
            <div
              class="wrapper w-full svelte-1gmj9k4"
            >
              <input
                class="w-full svelte-1gmj9k4"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-1gmj9k4"
              >
                <span
                  class="progress svelte-1gmj9k4"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1vd9h50"
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</span>
`;

exports[`Toolshot components/Player/Player.tools.svelte: With track list 1`] = `
<span>
  <div
    class="root svelte-1wzurh7"
  >
    <audio
      autoplay=""
      class="svelte-1wzurh7"
      data-testid="audio"
      src="./no-duration.mp3"
    />
    <div
      class="content svelte-1wzurh7"
    >
      <span
        class="current svelte-1wzurh7"
      >
        <div
          class="undefined root svelte-1wnrcpi"
        >
          <a
            class="flex-none"
            href="#/album/1"
          >
            <img
              alt="./# Films/cover.jpg"
              class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
              height="256"
              loading="lazy"
              src="./%23 Films/cover.jpg"
              width="256"
            />
             
            
          </a>
           
          <div
            class="track svelte-1wnrcpi"
          >
            <span
              class="title svelte-1wnrcpi"
            >
              file 1
            </span>
             
            <span>
              <a
                class="text-sm underlined"
                href="#/artist/0"
                onclick="event.stopPropagation()"
              >
                Someone
              </a>
            </span>
          </div>
           
           
        </div>
      </span>
       
      <div
        class="player svelte-1wzurh7"
      >
        <span
          class="controls svelte-1wzurh7"
        >
          <span>
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper svelte-1x6dshm"
            >
              <button
                class="iconOnly noBorder svelte-1vd9h50"
              >
                <i
                  class="material-icons svelte-1vd9h50"
                >
                  library_add
                </i>
                 
                 
                
                 
              </button>
            </span>
             
            
          </span>
          
           
          <span
            class="svelte-5wf0h"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                shuffle
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1vd9h50"
            disabled=""
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              skip_previous
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly large svelte-1vd9h50"
            disabled=""
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="iconOnly noBorder svelte-1vd9h50"
            disabled=""
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              skip_next
            </i>
             
             
             
          </button>
           
          <span
            class="svelte-5wf0h"
          >
            <button
              class="iconOnly noBorder svelte-1vd9h50"
            >
              <i
                class="material-icons svelte-1vd9h50"
              >
                repeat
              </i>
               
               
               
            </button>
          </span>
           
          <button
            class="invisible iconOnly noBorder svelte-1vd9h50"
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              favorite_border
            </i>
             
             
             
          </button>
        </span>
         
        <div
          class="svelte-fkspjj"
        >
          <span
            class="svelte-fkspjj"
          >
            0:00
          </span>
           
          <div
            class="wrapper w-full svelte-1gmj9k4"
          >
            <input
              class="w-full svelte-1gmj9k4"
              max="0"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-1gmj9k4"
            >
              <span
                class="progress svelte-1gmj9k4"
                style="right:100%"
              />
            </div>
          </div>
           
          <span
            class="svelte-fkspjj"
          >
            0:00
          </span>
        </div>
      </div>
       
      <span
        class="volume svelte-1wzurh7"
      >
        <div
          class="svelte-186fmtk"
        >
          <span
            class="volume-slider svelte-186fmtk"
          >
            <div
              class="wrapper w-full svelte-1gmj9k4"
            >
              <input
                class="w-full svelte-1gmj9k4"
                max="100"
                min="0"
                type="range"
              />
               
              <div
                class="sliderTrack svelte-1gmj9k4"
              >
                <span
                  class="progress svelte-1gmj9k4"
                  style="right:0%"
                />
              </div>
            </div>
          </span>
           
          <button
            class="iconOnly noBorder svelte-1vd9h50"
          >
            <i
              class="material-icons svelte-1vd9h50"
            >
              volume_up
            </i>
             
             
             
          </button>
        </div>
      </span>
    </div>
  </div>
</span>
`;
